<resources>
    <string name="app_name">ASMT</string>
    <string name="hello_nepal">Hello Nepal</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_phone">Enter your phone</string>
    <string name="enter_your_message">Enter your message</string>
    <string name="submit">Submit</string>
    <string name="this_field_is_required">This field is required</string>
    <string name="invalid_email">Invalid email</string>
    <string name="invalid_phone">Invalid phone</string>
    <string name="male">Male</string>
    <string name="female">female</string>
    <string name="gender">Gender</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="spinner">Spinner</string>
    <string name="listView">ListView</string>
    <string name="dashboard">Dashboard</string>
    <string name="listview">ListView</string>
    <string name="recyclerView">Recycler View</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="contact_us">Contact Us</string>
    <string name="async_task">AsyncTask</string>
    <string name="name">Name</string>
    <string name="Add">Add</string>
    <string name="realm">Realm</string>
    <string name="view_pager">View Pager</string>

    <string name="no_internet_connection_detected">No internet connection detected</string>
    <string name="exception_occurred">Some exception occurred in the server.</string>
    <string name="retrofit">Retrofit</string>
    <string name="loading">Loading Data</string>
    <string name="title_activity_maps">Map</string>
</resources>
