<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/listView" />
        <item
            android:id="@+id/nav_recyclerView"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/recyclerView" />
        <item
            android:id="@+id/nav_spinner"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/spinner" />

        <item
            android:id="@+id/nav_async"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/async_task" />

        <item
            android:id="@+id/nav_realm"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/realm" />

        <item
            android:id="@+id/nav_viewPager"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/view_pager" />

        <item
            android:id="@+id/nav_retrofit"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/retrofit" />
            />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_contact"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/contact_us" />
        </menu>
    </item>
</menu>
